--- a/Model-Project/index.html
+++ b/Model-Project/index.html
@@ -15,28 +15,18 @@
     <main>
       <header>
         <nav>
-        <h1>MODEL PROJECT</h1>
-        <ul>
-          <li><a href=""></a>HOME</li>
-          <li><a href=""></a>MODEL</li>
-          <li><a href=""></a>ABOUT</li>
-        </ul>
-      </nav>
+          <h1>MODEL PROJECT</h1>
+          <ul class="links">
+            <li><a class="a" href="#"></a>HOME</li>
+            <li><a class="a" href="#"></a>MODEL</li>
+            <li><a class="a" href="#"></a>ABOUT</li>
+          </ul>
+        </nav>
       </header>
-    <div class="modal one">
+    </main>
+    <div class="button-div">
+      <button class="modal-btn">Open Modal</button>
     </div>
-    
-    <!-- <div class="modal two">
-      <div class="header">
-        <button class="cancel"><i class="fa fa-times"></i></button>
-      </div>
-       <h1 class="like"><i class="fa fa-thumbs-up" aria-hidden="true"></i></h1>
-      <h1 class="good">GOOD JOB</h1> -->
-    </div> 
-  </main>
-  <div class="button-div">
-    <button class="modal-btn">Open Modal</button>
-  </div>
     <script src="./app.js"></script>
   </body>
 </html>
