--- a/Model-Project/index.html
+++ b/Model-Project/index.html
@@ -23,6 +23,13 @@
           </ul>
         </nav>
       </header>
+      <div class="model">
+        <div class="header">
+          <button class="cancel"><i class="fa fa-times"></i></button>
+        </div>
+        <h1 class="like"><i class="fa fa-thumbs-up"></i></h1>
+        <h1 class="good">GOOD JOB</h1>
+      </div>
     </main>
     <div class="button-div">
       <button class="modal-btn">Open Modal</button>
