--- a/Model-Project/index.html
+++ b/Model-Project/index.html
@@ -28,7 +28,7 @@
           <button class="cancel"><i class="fa fa-times"></i></button>
         </div>
         <h1 class="like"><i class="fa fa-thumbs-up"></i></h1>
-        <h1 class="good">GOOD JOB</h1>
+        <h1 class="good">Thanks for Clicking</h1>
       </div>
     </main>
     <div class="button-div">
