--- a/Model-Project/index.html
+++ b/Model-Project/index.html
@@ -10,6 +10,12 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <main>
@@ -17,12 +23,13 @@
         <nav>
           <h1>MODEL PROJECT</h1>
           <ul class="links">
-            <li><a class="a" href="#"></a>HOME</li>
-            <li><a class="a" href="#"></a>MODEL</li>
-            <li><a class="a" href="#"></a>ABOUT</li>
+            <li><a href="#">HOME</a></li>
+            <li><a href="#">MODEL</a></li>
+            <li><a href="#">ABOUT</a></li>
           </ul>
         </nav>
       </header>
+      <h1 class="description">CLICK THE BUTTON IN THE BOTTOM</h1>
       <div class="model">
         <div class="header">
           <button class="cancel"><i class="fa fa-times"></i></button>
