--- a/6-Questions/index.html
+++ b/6-Questions/index.html
@@ -26,6 +26,9 @@
           <button class="clickbtn1">
             <i class="fa fa-plus" aria-hidden="true"></i>
           </button>
+          <button class="btnhiden1">
+            <i class="fa fa-minus" aria-hidden="true"></i>
+          </button >
         </div>
 
         <div class="hiddentext1">
@@ -40,6 +43,9 @@
           <h4>Do you Accept All Major Credit Cards?</h4>
           <button class="clickbtn2">
             <i class="fa fa-plus" aria-hidden="true"></i>
+          </button>
+          <button class="btnhiden2">
+            <i class="fa fa-minus" aria-hidden="true"></i>
           </button>
         </div>
 
@@ -56,6 +62,9 @@
           <h4>Do you Accept All Major Credit Cards?</h4>
           <button class="clickbtn3">
             <i class="fa fa-plus" aria-hidden="true"></i>
+          </button>
+          <button class="btnhiden3">
+            <i class="fa fa-minus" aria-hidden="true"></i>
           </button>
         </div>
         <div class="hiddentext3">
