--- a/6-Questions/index.html
+++ b/6-Questions/index.html
@@ -20,36 +20,40 @@
   <body>
     <div class="container">
       <h1>General Questions</h1>
-      <section>
+      <section class="parent">
         <div class="container1">
           <h4>Do you Accept All Major Credit Cards?</h4>
-          <button class="clickbtn1">
-            <i class="fa fa-plus" aria-hidden="true"></i>
+          <button type="button" class="question-btn">
+            <span class="clickbtn">
+              <i class="fa fa-plus" aria-hidden="true"></i>
+            </span>
+            <span class="btnhiden">
+              <i class="fa fa-minus" aria-hidden="true"></i>
+            </span>
           </button>
-          <button class="btnhiden1">
-            <i class="fa fa-minus" aria-hidden="true"></i>
-          </button >
         </div>
 
-        <div class="hiddentext1">
+        <div class="hiddentext">
           Lorem Ipsum is simply dummy text of the printing and <br> typesetting
           industry. Lorem Ipsum has been the industry's<br>  standard dummy text ever
           since the 1500s.
       </section>
 
       <!-- q2 -->
-      <section>
+      <section class="parent">
         <div class="container1">
           <h4>Do you Accept All Major Credit Cards?</h4>
-          <button class="clickbtn2">
-            <i class="fa fa-plus" aria-hidden="true"></i>
-          </button>
-          <button class="btnhiden2">
-            <i class="fa fa-minus" aria-hidden="true"></i>
+          <button type="button" class="question-btn">
+            <span class="clickbtn">
+              <i class="fa fa-plus" aria-hidden="true"></i>
+            </span>
+            <span class="btnhiden">
+              <i class="fa fa-minus" aria-hidden="true"></i>
+            </span>
           </button>
         </div>
 
-        <div class="hiddentext2">
+        <div class="hiddentext">
           Lorem Ipsum is simply dummy text of the printing and <br> typesetting
           industry. Lorem Ipsum has been the industry's<br>  standard dummy text ever
           since the 1500s.
@@ -57,17 +61,19 @@
       </section>
 
       <!-- q3 -->
-      <section>
+      <section class="parent">
         <div class="container1">
           <h4>Do you Accept All Major Credit Cards?</h4>
-          <button class="clickbtn3">
-            <i class="fa fa-plus" aria-hidden="true"></i>
-          </button>
-          <button class="btnhiden3">
-            <i class="fa fa-minus" aria-hidden="true"></i>
+          <button type="button" class="question-btn">
+            <span class="clickbtn">
+              <i class="fa fa-plus" aria-hidden="true"></i>
+            </span>
+            <span class="btnhiden">
+              <i class="fa fa-minus" aria-hidden="true"></i>
+            </span>
           </button>
         </div>
-        <div class="hiddentext3">
+        <div class="hiddentext">
           Lorem Ipsum is simply dummy text of the printing and <br> typesetting
           industry. Lorem Ipsum has been the industry's<br>  standard dummy text ever
           since the 1500s.
