--- a/6-Questions/index.html
+++ b/6-Questions/index.html
@@ -5,10 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Q & A</title>
     <!-- font-awesome -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" />
     <!-- extra fonts -->
     <link
       href="https://fonts.googleapis.com/css?family=Great+Vibes&display=swap"
@@ -18,68 +15,88 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div class="container">
-      <h1>General Questions</h1>
-      <section class="parent">
-        <div class="container1">
-          <h4>Do you Accept All Major Credit Cards?</h4>
-          <button type="button" class="question-btn">
-            <span class="clickbtn">
-              <i class="fa fa-plus" aria-hidden="true"></i>
-            </span>
-            <span class="btnhiden">
-              <i class="fa fa-minus" aria-hidden="true"></i>
-            </span>
-          </button>
+      <section class="questions">
+        <!-- title -->
+        <div class="title">
+          <h2>general questions</h2>
         </div>
-
-        <div class="hiddentext">
-          Lorem Ipsum is simply dummy text of the printing and <br> typesetting
-          industry. Lorem Ipsum has been the industry's<br>  standard dummy text ever
-          since the 1500s.
+        <!-- questions -->
+        <div class="section-center">
+          <!-- single question -->
+          <article class="question">
+            <!-- question title -->
+            <div class="question-title">
+              <p>do you accept all major credit cards?</p>
+              <button type="button" class="question-btn">
+                <span class="plus-icon">
+                  <i class="far fa-plus-square"></i>
+                </span>
+                <span class="minus-icon">
+                  <i class="far fa-minus-square"></i>
+                </span>
+              </button>
+            </div>
+            <!-- question text -->
+            <div class="question-text">
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est
+                dolore illo dolores quia nemo doloribus quaerat, magni numquam
+                repellat reprehenderit.
+              </p>
+            </div>
+          </article>
+          <!-- end of single question -->
+          <!-- single question -->
+          <article class="question">
+            <!-- question title -->
+            <div class="question-title">
+              <p>do you suppport local farmers?</p>
+              <button type="button" class="question-btn">
+                <span class="plus-icon">
+                  <i class="far fa-plus-square"></i>
+                </span>
+                <span class="minus-icon">
+                  <i class="far fa-minus-square"></i>
+                </span>
+              </button>
+            </div>
+            <!-- question text -->
+            <div class="question-text">
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est
+                dolore illo dolores quia nemo doloribus quaerat, magni numquam
+                repellat reprehenderit.
+              </p>
+            </div>
+          </article>
+          <!-- end of single question -->
+          <!-- single question -->
+          <article class="question">
+            <!-- question title -->
+            <div class="question-title">
+              <p>do you use organic ingredients?</p>
+              <!-- button -->
+              <button type="button" class="question-btn">
+                <span class="plus-icon">
+                  <i class="far fa-plus-square"></i>
+                </span>
+                <span class="minus-icon">
+                  <i class="far fa-minus-square"></i>
+                </span>
+              </button>
+            </div>
+            <!-- question text -->
+            <div class="question-text">
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est
+                dolore illo dolores quia nemo doloribus quaerat, magni numquam
+                repellat reprehenderit.
+              </p>
+            </div>
+          </article>
+          <!-- end of single question -->
       </section>
-
-      <!-- q2 -->
-      <section class="parent">
-        <div class="container1">
-          <h4>Do you Accept All Major Credit Cards?</h4>
-          <button type="button" class="question-btn">
-            <span class="clickbtn">
-              <i class="fa fa-plus" aria-hidden="true"></i>
-            </span>
-            <span class="btnhiden">
-              <i class="fa fa-minus" aria-hidden="true"></i>
-            </span>
-          </button>
-        </div>
-
-        <div class="hiddentext">
-          Lorem Ipsum is simply dummy text of the printing and <br> typesetting
-          industry. Lorem Ipsum has been the industry's<br>  standard dummy text ever
-          since the 1500s.
-        </div>
-      </section>
-
-      <!-- q3 -->
-      <section class="parent">
-        <div class="container1">
-          <h4>Do you Accept All Major Credit Cards?</h4>
-          <button type="button" class="question-btn">
-            <span class="clickbtn">
-              <i class="fa fa-plus" aria-hidden="true"></i>
-            </span>
-            <span class="btnhiden">
-              <i class="fa fa-minus" aria-hidden="true"></i>
-            </span>
-          </button>
-        </div>
-        <div class="hiddentext">
-          Lorem Ipsum is simply dummy text of the printing and <br> typesetting
-          industry. Lorem Ipsum has been the industry's<br>  standard dummy text ever
-          since the 1500s.
-        </div>
-      </section>
-    </div>
+    </main>
     <!-- javascript -->
     <script src="app.js"></script>
   </body>
