--- a/6-Questions/index.html
+++ b/6-Questions/index.html
@@ -26,7 +26,7 @@
           <article class="question">
             <!-- question title -->
             <div class="question-title">
-              <p>do you accept all major credit cards?</p>
+              <p>Why do you want to attend Harvard University?</p>
               <button type="button" class="question-btn">
                 <span class="plus-icon">
                   <i class="far fa-plus-square"></i>
@@ -39,9 +39,7 @@
             <!-- question text -->
             <div class="question-text">
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est
-                dolore illo dolores quia nemo doloribus quaerat, magni numquam
-                repellat reprehenderit.
+                Harvard students have access to courses, research institutes, and faculty mentors from all parts of Harvard. With world-renowned faculty, state-of-the-art resources, and individualized instruction, it's the perfect place to pursue your favorite and still-to-be-discovered academic interests
               </p>
             </div>
           </article>
@@ -50,7 +48,7 @@
           <article class="question">
             <!-- question title -->
             <div class="question-title">
-              <p>do you suppport local farmers?</p>
+              <p>Why would you want to be famous?</p>
               <button type="button" class="question-btn">
                 <span class="plus-icon">
                   <i class="far fa-plus-square"></i>
@@ -63,9 +61,7 @@
             <!-- question text -->
             <div class="question-text">
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est
-                dolore illo dolores quia nemo doloribus quaerat, magni numquam
-                repellat reprehenderit.
+                The desire to be seen/valued was the biggest perceived appeal of fame, followed by the desire for status, followed by a prosocial motivation. Interestingly, the motivations were associated with different fundamental human needs.
               </p>
             </div>
           </article>
@@ -74,7 +70,7 @@
           <article class="question">
             <!-- question title -->
             <div class="question-title">
-              <p>do you use organic ingredients?</p>
+              <p>Why do you want to become a software engineer essay?</p>
               <!-- button -->
               <button type="button" class="question-btn">
                 <span class="plus-icon">
@@ -88,9 +84,9 @@
             <!-- question text -->
             <div class="question-text">
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est
-                dolore illo dolores quia nemo doloribus quaerat, magni numquam
-                repellat reprehenderit.
+                I Love Software Engineering
+                
+                Software engineer, to me, is an art, a creativity and intelligent skills to breath life into the code and build applications to solve the day to day affairs. It is a passion to work with 0s and 1s and give them a meaning which can be understood by the machines as well as humans.
               </p>
             </div>
           </article>
