--- a/setup/index.html
+++ b/setup/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Menu</title>
+    <title>Starter</title>
     <!-- font-awesome -->
     <link
       rel="stylesheet"
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <h1>menu project</h1>
     <!-- javascript -->
     <script src="app.js"></script>
   </body>
