--- a/7-Menue/index.html
+++ b/7-Menue/index.html
@@ -21,14 +21,12 @@
       </div>
       <!-- filter buttons -->
       <div class="btn-container">
-        <button type="button" class="filter-btn all" data-id="all">all</button>
-        <button type="button" class="filter-btn break" data-id="breakfast">
+        <button type="button" class="filter-btn" data-id="all">all</button>
+        <button type="button" class="filter-btn" data-id="breakfast">
           breakfast
         </button>
-        <button type="button" class="filter-btn lun" data-id="lunch">
-          lunch
-        </button>
-        <button type="button" class="filter-btn shake" data-id="shakes">
+        <button type="button" class="filter-btn" data-id="lunch">lunch</button>
+        <button type="button" class="filter-btn" data-id="shakes">
           shakes
         </button>
       </div>
