--- a/7-Menue/index.html
+++ b/7-Menue/index.html
@@ -21,7 +21,8 @@
       </div>
       <!-- filter buttons -->
       <div class="btn-container">
-        <button type="button" class="filter-btn" data-id="all">all</button>
+        <!-- <button type="button" class="filter-btn" data-id="all">all</button> -->
+        <!-- 
         <button type="button" class="filter-btn" data-id="breakfast">
           breakfast
         </button>
@@ -29,6 +30,7 @@
         <button type="button" class="filter-btn" data-id="shakes">
           shakes
         </button>
+        -->
       </div>
       <!-- menu items -->
       <div class="section-center">
@@ -84,5 +86,6 @@
     </section>
     <!-- javascript -->
     <script src="app.js"></script>
+    <script src="newApp.js"></script>
   </body>
 </html>
