--- a/8-video/index.html
+++ b/8-video/index.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <div class="preloader">
+      <img src="./preloader.gif" alt="" />
+    </div>
     <header>
       <video class="video-container" loop autoplay muted>
         <source src="./video.mp4" type="video/mp4" />
