--- a/8-video/index.html
+++ b/8-video/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <!-- the preloader -->
     <div class="preloader">
       <img src="./preloader.gif" alt="" />
     </div>
