--- a/8-video/index.html
+++ b/8-video/index.html
@@ -13,6 +13,7 @@
     <div class="preloader">
       <img src="./preloader.gif" alt="" />
     </div>
+    <!-- the header -->
     <header>
       <video class="video-container" loop autoplay muted>
         <source src="./video.mp4" type="video/mp4" />
