--- a/8-video/index.html
+++ b/8-video/index.html
@@ -18,6 +18,7 @@
       <video class="video-container" loop autoplay muted>
         <source src="./video.mp4" type="video/mp4" />
       </video>
+      <!-- the text above the video -->
       <h1>video project</h1>
       <button class="switch-btn">
         <span>Play</span>
