--- a/8-video/index.html
+++ b/8-video/index.html
@@ -20,9 +20,11 @@
       </video>
       <!-- the text above the video -->
       <h1>video project</h1>
+      <!-- the three btns inside one btn  -->
       <button class="switch-btn">
         <span>Play</span>
         <span>Pause</span>
+        <!-- the overlay btn (switcher) -->
         <span class="switch"></span>
       </button>
     </header>
