--- a/9-Scroll/index.html
+++ b/9-Scroll/index.html
@@ -42,6 +42,18 @@
               <li>
                 <a href="#tours" class="scroll-link">tours</a>
               </li>
+              <li>
+                <a href="#about" class="scroll-link">about</a>
+              </li>
+              <li>
+                <a href="#services" class="scroll-link">services</a>
+              </li>
+              <li>
+                <a href="#tours" class="scroll-link">tours</a>
+              </li>
+              <li>
+                <a href="#tours" class="scroll-link">tours</a>
+              </li>
             </ul>
           </div>
         </div>
