--- a/10- Tabs/index.html
+++ b/10- Tabs/index.html
@@ -11,7 +11,7 @@
   <body>
     <div class="center">
       <div class="btns">
-        <button data-id="history">history</button>
+        <button data-id="history" class="">history</button>
         <button data-id="Vision">Vision</button>
         <button data-id="Goals">Goals</button>
       </div>
