--- a/10- Tabs/index.html
+++ b/10- Tabs/index.html
@@ -11,9 +11,9 @@
   <body>
     <div class="center">
       <div class="btns">
-        <button data-id="history" class="">history</button>
-        <button data-id="Vision">Vision</button>
-        <button data-id="Goals">Goals</button>
+        <button data-id="history" class="history active">history</button>
+        <button data-id="Vision" class="Vision">Vision</button>
+        <button data-id="Goals" class="Goals">Goals</button>
       </div>
       <p class="pragraph">
         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa amet
