--- a/11-CountDown-Timer/index.html
+++ b/11-CountDown-Timer/index.html
@@ -17,7 +17,9 @@
       <!-- info -->
       <article class="gift-info">
         <h3>old iphone giveaway</h3>
-        <h4 class="giveaway">giveaway ends on Sunday, 24 April 2020, 8:00am</h4>
+        <h4 class="giveaway">
+          giveaway ends on <span class="april">, 24 April 2020, 8:00am</span>
+        </h4>
         <p>
           Lorem ipsum dolor sit, amet consectetur adipisicing elit.
           Reprehenderit molestiae cum libero atque ut voluptate qui consectetur
