--- a/15-quiz-app/index.html
+++ b/15-quiz-app/index.html
@@ -6,13 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nova+Square&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <div class="container">
+    <div class="container cover">
       <div class="center">
         <h1>ARE YOU READY?</h1>
-        <button>PLAY</button>
-        <button>HIGH SCORE</button>
+        <div class="buttons">
+          <button>PLAY</button>
+          <button id="high-score">HIGH SCORE</button>
+        </div>
       </div>
     </div>
     <script src="./app.js"></script>
