--- a/15-quiz-app/index.html
+++ b/15-quiz-app/index.html
@@ -12,14 +12,21 @@
       href="https://fonts.googleapis.com/css2?family=Nova+Square&display=swap"
       rel="stylesheet"
     />
+
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
+    />
   </head>
   <body>
-    <div class="container cover">
+    <div class="container cover display">
       <div class="center">
         <h1>ARE YOU READY?</h1>
         <div class="buttons">
-          <button>PLAY</button>
-          <button id="high-score">HIGH SCORE</button>
+          <button class="btns">PLAY</button>
+          <button class="btns" id="high-score">
+            HIGH SCORE <i class="fas fa-crown"></i>
+          </button>
         </div>
       </div>
     </div>
