--- a/15-quiz-app/index.html
+++ b/15-quiz-app/index.html
@@ -30,6 +30,39 @@
         </div>
       </div>
     </div>
+
+    <!-- quiz -->
+    <div class="containerr">
+      <div class="container-top">
+        <div class="right-part">
+          <h1>question 1</h1>
+          <div id="proggress"></div>
+        </div>
+        <div class="right-part">
+          <p>score</p>
+          <p>20</p>
+        </div>
+      </div>
+      <div class="questions">
+        <h1>Why Somalia is failed state more then 60 years</h1>
+        <div class="container-choses">
+          <p class="prefix">A</p>
+          <p class="Choice-text">WE</p>
+        </div>
+        <div class="container-choses">
+          <p class="prefix">B</p>
+          <p class="Choice-text">US</p>
+        </div>
+        <div class="container-choses">
+          <p class="prefix">C</p>
+          <p class="Choice-text">THEY</p>
+        </div>
+        <div class="container-choses">
+          <p class="prefix">D</p>
+          <p class="Choice-text">YOU</p>
+        </div>
+      </div>
+    </div>
     <script src="./app.js"></script>
   </body>
 </html>
