--- a/15-quiz-app/index.html
+++ b/15-quiz-app/index.html
@@ -45,7 +45,9 @@
           </div>
         </div>
         <div class="questions">
-          <h1>Why Somalia is failed state more then 60 years</h1>
+          <h1 class="question">
+            Why Somalia is failed state more then 60 years
+          </h1>
           <div class="container-choses">
             <p class="prefix">A</p>
             <p class="Choice-text" data-id="1">WE</p>
@@ -60,7 +62,7 @@
           </div>
           <div class="container-choses">
             <p class="prefix">D</p>
-            <p class="Choice-text" data-id="3">YOU</p>
+            <p class="Choice-text" data-id="4">YOU</p>
           </div>
         </div>
       </div>
