--- a/15-quiz-app/index.html
+++ b/15-quiz-app/index.html
@@ -19,7 +19,7 @@
     />
   </head>
   <body>
-    <div class="container cover display">
+    <div class="container cover">
       <div class="center">
         <h1>ARE YOU READY?</h1>
         <div class="buttons">
