--- a/15-quiz-app/index.html
+++ b/15-quiz-app/index.html
@@ -24,7 +24,7 @@
         <h1>ARE YOU READY?</h1>
         <div class="buttons">
           <button class="btns">PLAY</button>
-          <button class="btns" id="high-score">
+          <button class="btns" id="high-score" disabled>
             HIGH SCORE <i class="fas fa-crown"></i>
           </button>
         </div>
@@ -36,7 +36,7 @@
       <div class="center-container">
         <div class="container-top">
           <div class="right-part">
-            <h1>Question 1</h1>
+            <h1>Question <span class="questionNumber"></span></h1>
             <div id="proggress"></div>
           </div>
           <div class="right-part">
