--- a/15-quiz-app/index.html
+++ b/15-quiz-app/index.html
@@ -19,7 +19,7 @@
     />
   </head>
   <body>
-    <div class="container cover">
+    <div class="container cover display">
       <div class="center">
         <h1>ARE YOU READY?</h1>
         <div class="buttons">
@@ -71,23 +71,7 @@
     </div>
 
     <!-- reslut -->
-    <div class="containerResult display">
-      <div class="centertext">
-        <div class="top">HEY Thanks For Taking This QUIZ</div>
-        <div class="scores">
-          Your Score is <span class="scoreReslt"> 1</span>
-        </div>
-        <div class="text">
-          <p class="amazing">
-            You're amazing for taking this quiz. Not many people challenge
-            themselves every now and then. It's always good to stay confident
-            with any challenges that may come your way.
-          </p>
-          <p class="author">AUTHOR: ABDULSAABIR HAAJI</p>
-        </div>
-        <button class="Home">BACK TO HOME</button>
-      </div>
-    </div>
+    <div class="containerResult"></div>
     <script src="./app.js"></script>
   </body>
 </html>
