--- a/15-quiz-app/index.html
+++ b/15-quiz-app/index.html
@@ -72,21 +72,11 @@
 
     <!-- reslut -->
     <div class="containerResult">
-      <div class="centertext">
-        <div class="top">HEY Thanks For Taking This QUIZ</div>
-        <div class="scores">
-          Your Score is <span class="scoreReslt"> 1</span>
-        </div>
-        <div class="text">
-          <p class="amazing">
-            You're amazing for taking this quiz. Not many people challenge
-            themselves every now and then. It's always good to stay confident
-            with any challenges that may come your way.
-          </p>
-          <p class="author">AUTHOR: ABDULSAABIR HAAJI</p>
-        </div>
-        <button class="Home">BACK TO HOME</button>
-      </div>
+      <form>
+        <input type="text" placeholder="Enter Your Name" />
+        <button class="save">Save Your Score</button>
+        <button class="Play">Play Again</button>
+      </form>
     </div>
     <script src="./app.js"></script>
   </body>
