--- a/15-quiz-app/index.html
+++ b/15-quiz-app/index.html
@@ -72,6 +72,7 @@
 
     <!-- reslut -->
     <div class="containerResult">
+      <h1 class="recentScore">0</h1>
       <form>
         <input type="text" placeholder="Enter Your Name" />
         <button class="save">Save Your Score</button>
