--- a/15-quiz-app/index.html
+++ b/15-quiz-app/index.html
@@ -19,7 +19,8 @@
     />
   </head>
   <body>
-    <div class="container cover ">
+   <section class="sectionload"><div id="loader"></div></section>
+    <div class="container cover display">
       <div class="center">
         <h1>ARE YOU READY?</h1>
         <div class="buttons">
