--- a/17-Button Ripple/index.html
+++ b/17-Button Ripple/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style.css" />
-    <title>D ocument</title>
+    <title>Document</title>
   </head>
   <body>
-    <a class="btn" href="#"><span class="ribble">hover</span> </a>
+    <a class="btn" href="#"><span c a lass="ribble">hover</span> </a>
     <script src="./app.js"></script>
   </body>
 </html>
