--- a/17-Button Ripple/18-Recipe APP/index.html
+++ b/17-Button Ripple/18-Recipe APP/index.html
@@ -29,7 +29,39 @@
           </a>
         </div>
       </div>
+  
+
+    <!-- favories meals -->
+    <div class="Favorites">
+        <ul class="fav-container">
+            <!-- image 1 -->
+            <li>
+                <img src="https://www.themealdb.com/images/media/meals/n7qnkb1630444129.jpg" alt="">
+                    <p> Rooti</p>
+                </img>
+            </li>
+            <!-- image 2 -->
+            <li>
+                <img src="https://www.themealdb.com/images/media/meals/llcbn01574260722.jpg" alt="">
+                    <p>Pasta</p>
+                </img>
+            </li>
+            <!-- image 3 -->
+            <li>
+                <img src="https://www.themealdb.com/images/media/meals/tnwy8m1628770384.jpg" alt="">
+                    <p>Cambuulo</p>
+                </img>
+            </li>
+            <!-- image 4 -->
+            <li>
+                <img src="https://www.themealdb.com/images/media/meals/0jv5gx1661040802.jpg" alt="">
+                    <p>Pasta</p>
+                </img>
+            </li>
+        </ul>
     </div>
+
+</div>
 
     <script src="./app.js"></script>
   </body>
