--- a/17-Button Ripple/18-Recipe APP/index.html
+++ b/17-Button Ripple/18-Recipe APP/index.html
@@ -61,7 +61,35 @@
         </ul>
     </div>
 
+    <!-- advertisment -->
+
+    <div class="adver-container">
+        <div class="brand">
+        <h3>Personalize</h3>
+        <p>Your recommandations</p>
+        <a href=""><iconify-icon icon="iconoir:cancel"></iconify-icon></a>
+        </div>
+        <div class="btn">
+            <button class="start">
+                OUR SPONSERS TODAY
+            </button>
+        </div>
+    </div>
+
+    <!-- recipe of the day -->
+    <div class="recipe">
+        <div class="img">
+            <img src="https://www.themealdb.com/images/media/meals/llcbn01574260722.jpg" alt="">
+        </div>
+        <div class="textMeal">
+            <h1>Copycat Chipotle <span> <iconify-icon icon="bi:r-circle"></iconify-icon></span> Chicken  </h1>
+        </div>
+    
+    <!-- <iconify-icon icon="raphael:fave"></iconify-icon> -->
+    <iconify-icon class="icon" icon="ic:baseline-favorite-border"></iconify-icon>
+
 </div>
+
 
     <script src="./app.js"></script>
   </body>
