--- a/17-Button Ripple/18-Recipe APP/index.html
+++ b/17-Button Ripple/18-Recipe APP/index.html
@@ -23,7 +23,7 @@
           />
         </div>
         <div class="search">
-          <input type="text" placeholder="" id="" />
+          <input class="display" type="text" placeholder="" id="searchin" />
           <a class="searchBox" href="">
             <iconify-icon icon="bi:search"></iconify-icon>
           </a>
@@ -82,11 +82,14 @@
             <img src="https://www.themealdb.com/images/media/meals/llcbn01574260722.jpg" alt="">
         </div>
         <div class="textMeal">
-            <h1>Copycat Chipotle <span> <iconify-icon icon="bi:r-circle"></iconify-icon></span> Chicken  </h1>
+            <h3>Copycat Chipotle  </h3>
+            <iconify-icon class="icon1" icon="bi:r-circle"></iconify-icon>
+            <h3> Chicken  </h3>
+            <iconify-icon class="icon" icon="ic:baseline-favorite-border"></iconify-icon>
         </div>
     
     <!-- <iconify-icon icon="raphael:fave"></iconify-icon> -->
-    <iconify-icon class="icon" icon="ic:baseline-favorite-border"></iconify-icon>
+   
 
 </div>
 
