--- a/18-Recipe APP/index.html
+++ b/18-Recipe APP/index.html
@@ -79,13 +79,15 @@
     <!-- recipe of the day -->
     <div class="recipe">
         <div class="img">
-            <img src="https://www.themealdb.com/images/media/meals/llcbn01574260722.jpg" alt="">
+          <!-- <div class="mealtitlecontainer">
+            <h3 class="mealtitle">SHAAH</h3>
+          </div> -->
+         
+            <img id="mealid"alt="">
         </div>
         <div class="textMeal">
-            <h3>Copycat Chipotle  </h3>
-            <iconify-icon class="icon1" icon="bi:r-circle"></iconify-icon>
-            <h3> Chicken  </h3>
-            <iconify-icon class="icon" icon="ic:baseline-favorite-border"></iconify-icon>
+            <h3 id="foodtitle">Copycat Chipotle</h3>
+            <iconify-icon class="icon"   icon="ic:baseline-favorite-border"></iconify-icon>
         </div>
     
     <!-- <iconify-icon icon="raphael:fave"></iconify-icon> -->
