--- a/18-Recipe APP/index.html
+++ b/18-Recipe APP/index.html
@@ -79,9 +79,9 @@
     <!-- recipe of the day -->
     <div class="recipe">
         <div class="img">
-          <!-- <div class="mealtitlecontainer">
+          <div class="mealtitlecontainer">
             <h3 class="mealtitle">SHAAH</h3>
-          </div> -->
+          </div>
          
             <img id="mealid"alt="">
         </div>
