--- a/18-Recipe APP/index.html
+++ b/18-Recipe APP/index.html
@@ -47,7 +47,7 @@
         </div>
         <div class="btn">
             <button class="start">
-                OUR SPONSERS TODAY
+              GET RANDOM FOOD
             </button>
         </div>
     </div>
