--- a/18-Recipe APP/index.html
+++ b/18-Recipe APP/index.html
@@ -46,7 +46,7 @@
         <a href=""><iconify-icon icon="iconoir:cancel"></iconify-icon></a>
         </div>
         <div class="btn">
-            <button class="start">
+            <button class="">
               GET RANDOM FOOD
             </button>
         </div>
@@ -65,7 +65,12 @@
             <h3 id="foodtitle">Copycat Chipotle</h3>
             <iconify-icon class="icon"   icon="ic:baseline-favorite-border"></iconify-icon>
         </div>
+        <div class="btnget">
+          <buton class="start">Get Random Food</buton>
     
+
+        </div>
+   
     <!-- <iconify-icon icon="raphael:fave"></iconify-icon> -->
    
 
