--- a/18-Recipe APP/index.html
+++ b/18-Recipe APP/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" />
+    <link rel="stylesheet" 
+href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <script src="https://code.iconify.design/iconify-icon/1.0.0/iconify-icon.min.js"></script>
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -63,7 +64,7 @@
         </div>
         <div class="textMeal">
             <h3 id="foodtitle">Copycat Chipotle</h3>
-            <h1></h1>
+            <i class="fa-regular icon fa-heart"></i>
         </div>
         <div class="btnget">
           <buton class="start">Get Random Food</buton>
