--- a/18-Recipe APP/index.html
+++ b/18-Recipe APP/index.html
@@ -47,7 +47,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
         <a href=""><iconify-icon icon="iconoir:cancel"></iconify-icon></a>
         </div>
         <div class="btn">
-            <button class="">
+            <button class="ssss">
               GET RANDOM FOOD
             </button>
         </div>
