--- a/17-Notes-app/index.html
+++ b/17-Notes-app/index.html
@@ -8,13 +8,22 @@
   </head>
   <body>
     <div class="notes">
-      <div></div>
+      <div>
         <button>Add Note</button>
+        <!-- list -->
         <div class="listNotes">
-            <div class="listItem">
-                <h4>Lecture Notes</h4>
-                <P>I learned NOthing Today</P>
-            </div>
+          <!-- item1 -->
+          <div class="listItem">
+            <h4 class="NoteTItle">Lecture Notes</h4>
+            <p class="noteBody">I learned NOthing Today</p>
+            <p class="date">Thurdsay 13:30</p>
+          </div>
+          <!-- item2 -->
+          <div class="listItem">
+            <h4 class="NoteTItle">Lecture Notes</h4>
+            <p class="noteBody">I learned NOthing Today</p>
+            <p class="date">Thurdsay 13:30</p>
+          </div>
         </div>
       </div>
     </div>
