--- a/17-Notes-app/index.html
+++ b/17-Notes-app/index.html
@@ -30,7 +30,7 @@
 
       <!-- notetext -->
       <section class="noteText">
-        <input type="text" placeholder="Enter a title..." />
+        <input type="text" placeholder="Enter a title..." style="" />
         <textarea name="text" id="note" cols="30" rows="10">
 I am the note body</textarea
         >
