--- a/17-Notes-app/index.html
+++ b/17-Notes-app/index.html
@@ -14,7 +14,7 @@
         <!-- list -->
         <div class="listNotes">
           <!-- item1 -->
-          <div class="listItem">
+          <div class="listItem selectedItem">
             <h4 class="NoteTItle">Lecture Notes</h4>
             <p class="noteBody">I learned NOthing Today</p>
             <p class="date">Thurdsay 13:30</p>
@@ -31,9 +31,13 @@
       <!-- notetext -->
       <section class="noteText">
         <input type="text" placeholder="Enter a title..." />
-        <textarea name="text" id="note" cols="30" rows="10">
-I am the note body</textarea
-        >
+        <textarea
+          name="text"
+          id="note"
+          cols="30"
+          rows="10"
+          placeholder="The Note Text..."
+        ></textarea>
       </section>
     </div>
   </body>
