--- a/17-Notes-app/index.html
+++ b/17-Notes-app/index.html
@@ -33,6 +33,7 @@
           rows="10"
           placeholder="The Note Text..."
         ></textarea>
+        <button class="save">Save</button>
       </section>
     </div>
   </body>
