--- a/17-Notes-app/index.html
+++ b/17-Notes-app/index.html
@@ -10,31 +10,34 @@
   <body>
     <div class="notes">
       <div class="left">
-        <button>Add Note</button>
+        <button id="Note">Add Note</button>
         <!-- list -->
         <div class="listNotes">
           <!-- item1 -->
-          <div class="listItem selectedItem">
+          <!-- <div class="listItem selectedItem">
             <h4 class="NoteTItle">Lecture Notes</h4>
             <p class="noteBody">I learned NOthing Today</p>
             <p class="date">Thurdsay 13:30</p>
-          </div>
+          </div> -->
           <!-- item2 -->
         </div>
       </div>
 
       <!-- notetext -->
       <section class="noteText">
-        <input type="text" placeholder="Enter a title..." />
+        <input class="Titletext" type="text" placeholder="Enter a title..." />
         <textarea
+          class="textarea"
           name="text"
           id="note"
           cols="30"
-          rows="10"
+          rows="20"
           placeholder="The Note Text..."
         ></textarea>
         <button class="save">Save</button>
       </section>
     </div>
+
+    <script src="./app.js"></script>
   </body>
 </html>
