--- a/17-Notes-app/index.html
+++ b/17-Notes-app/index.html
@@ -16,9 +16,8 @@
           <!-- item1 -->
           <!-- <div class="listItem selectedItem">
             <h4 class="NoteTItle">Lecture Notes</h4>
-            <p class="noteBody">I learned NOthing Today</p>
-            <p class="date">Thurdsay 13:30</p>
-      
+            <
+          </div> -->
         </div>
       </div>
 
