--- a/17-Notes-app/index.html
+++ b/17-Notes-app/index.html
@@ -12,9 +12,7 @@
       <div class="left">
         <button id="Note">Edit Note</button>
         <!-- list -->
-        <div class="listNotes">
-          </div> -->
-        </div>
+        <div class="listNotes"></div>
       </div>
 
       <!-- notetext -->
