--- a/17-Notes-app/index.html
+++ b/17-Notes-app/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="notes">
       <div class="left">
-        <button id="Note">Edit Note</button>
+        <button id="Note">Delete Notes</button>
         <!-- list -->
         <div class="listNotes"></div>
       </div>
