--- a/17-Notes-app/index.html
+++ b/17-Notes-app/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="notes">
       <div class="left">
-        <button id="Note">Del Notes</button>
+        <button id="Note" class="notesdel">Del Notes</button>
         <!-- list -->
         <div class="listNotes"></div>
       </div>
@@ -29,7 +29,7 @@
         <button class="save">Save</button>
       </section>
     </div>
-
+    <script src="https://code.iconify.design/iconify-icon/1.0.0/iconify-icon.min.js"></script>
     <script src="./app.js"></script>
   </body>
 </html>
