--- a/17-Notes-app/index.html
+++ b/17-Notes-app/index.html
@@ -5,12 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=, initial-scale=1.0" />
     <title>NOte App</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="container">
-      <div class="main">
+      <div class="addBox">
         <iconify-icon icon="bi:plus-circle-dotted"></iconify-icon>
         <h1>Add new Note</h1>
+      </div>
+      <div class="note">
+        <h1>Note Title</h1>
       </div>
     </div>
     <script src="https://code.iconify.design/iconify-icon/1.0.0/iconify-icon.min.js"></script>
